
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct winlink {int dummy; } ;
struct window_pane {int dummy; } ;
struct session {int dummy; } ;
struct format_tree {int dummy; } ;
struct cmdq_item {int * client; } ;
struct client {int dummy; } ;


 int FORMAT_NONE ;
 struct format_tree* format_create (int *,struct cmdq_item*,int ,int ) ;
 int format_defaults (struct format_tree*,struct client*,struct session*,struct winlink*,struct window_pane*) ;
 char* format_expand (struct format_tree*,char const*) ;
 int format_free (struct format_tree*) ;

char *
format_single(struct cmdq_item *item, const char *fmt, struct client *c,
    struct session *s, struct winlink *wl, struct window_pane *wp)
{
 struct format_tree *ft;
 char *expanded;

 if (item != ((void*)0))
  ft = format_create(item->client, item, FORMAT_NONE, 0);
 else
  ft = format_create(((void*)0), item, FORMAT_NONE, 0);
 format_defaults(ft, c, s, wl, wp);

 expanded = format_expand(ft, fmt);
 format_free(ft);
 return (expanded);
}
